Fix iphone overflow bug

--- a/src/components/Search.module.scss
+++ b/src/components/Search.module.scss
@@ -7,12 +7,16 @@
     width: 90vw !important;
     min-width: none !important;
     .form {
-      flex-wrap: wrap;
+      margin: {
+        bottom: 10px;
+      }
       .input--search {
         width: 100%;
-        margin: {
-          right: 0 !important;
-        }
+      }
+    }
+    .result {
+      margin: {
+        bottom: 30px !important;
       }
     }
   }
